--- a/index.html
+++ b/index.html
@@ -402,10 +402,46 @@
           </svg>
         </button>
       </div>
+      <form name="signup_form" autocomplete="on" class="contact-form">
+        <p class="contact-form-title">Оставьте свои данные, мы вам перезвоним</p>
+        <label for="user-name" class="contact-form-label">Имя</label>
+        <span class="modal-form-input-wrapper">
+          <input name="user-name" type="text" class="contact-form-input" id="user-name">
+          <svg class="modal-form-icon" width="18" height="18">
+            <use href="./images/icons/sprite.svg#person-black"></use>
+          </svg>
+        </span>
+        <label for="user-tel" class="contact-form-label">Телефон</label>
+        <span class="modal-form-input-wrapper">
+          <input name="user-tel" type="tel" class="contact-form-input" id="user-tel">
+          <svg class="modal-form-icon" width="18" height="18">
+            <use href="./images/icons/sprite.svg#phone-black"></use>
+          </svg>
+        </span>
+
+        <label for="user-email" class="contact-form-label">Почта</label>
+        <span class="modal-form-input-wrapper">
+          <input name="user-email" type="email" class="contact-form-input" id="user-email">
+          <svg class="modal-form-icon" width="18" height="18">
+            <use href="./images/icons/sprite.svg#email-black"></use>
+          </svg>
+        </span>
+        <label for="user-massage" class="contact-form-label">Комментарий</label>
+        <textarea name="user-massage" placeholder="Введите текст" class="modal-form-massage"
+          id="user-massage"></textarea>
+        <!-- <span class="modal-check-consent"> -->
+        <input type="checkbox" name="user-policy" class="modal-form-check-policy visually-hidden"
+          id="user-check-policy">
+        <label for="user-check-policy" class="modal-form-label-policy">Соглашаюсь с рассылкой и принимаю
+          <a href="#" class="form-contract-link">Условия договора</a>
+        </label>
+        <button type="submit" class="modal-form-button">Отправить</button>
+        <!-- </span> -->
+      </form>
     </div>
   </div>
   <script src="./js/modal.js"></script>
-  </script>
+
 </body>
 
 </html>
