--- a/index.html
+++ b/index.html
@@ -390,6 +390,18 @@
           </li>
         </ul>
       </div>
+      <div class="footer-form-subscribe">
+        <b class="footer-form-title">Подпишитесь на рассылку</b>
+        <form action="#" class="footer-subscribe-form" n>
+          <input type="email" name="email" class="subscribe-form-input" placeholder="E-mail">
+          <div class="subscribe-form-btn-content">
+            <button type="submit" class="subscribe-form-btn button">Подписаться</button>
+            <svg class="subscribe-form-icon" width="24" height="24">
+              <use href="./images/icons/sprite.svg#telegram"></use>
+            </svg>
+          </div>
+        </form>
+      </div>
     </div>
   </footer>
   <!-- MODAL -->
@@ -403,7 +415,7 @@
         </button>
       </div>
       <form name="signup_form" autocomplete="on" class="contact-form">
-        <p class="contact-form-title">Оставьте свои данные, мы вам перезвоним</p>
+        <b class="contact-form-title">Оставьте свои данные, мы вам перезвоним</b>
         <label for="user-name" class="contact-form-label">Имя</label>
         <span class="modal-form-input-wrapper">
           <input name="user-name" type="text" class="contact-form-input" id="user-name">
@@ -429,11 +441,11 @@
         <label for="user-massage" class="contact-form-label">Комментарий</label>
         <textarea name="user-massage" placeholder="Введите текст" class="modal-form-massage"
           id="user-massage"></textarea>
-        <!-- <span class="modal-check-consent"> -->
         <input type="checkbox" name="user-policy" class="modal-form-check-policy visually-hidden"
           id="user-check-policy">
-        <label for="user-check-policy" class="modal-form-label-policy">Соглашаюсь с рассылкой и принимаю
-          <a href="#" class="form-contract-link">Условия договора</a>
+        <label for="user-check-policy" class="modal-form-label-policy">
+          Соглашаюсь с рассылкой и принимаю
+          <a href="#" class="form-contract-link"> Условия договора</a>
         </label>
         <button type="submit" class="modal-form-button">Отправить</button>
         <!-- </span> -->
