--- a/portfolio.html
+++ b/portfolio.html
@@ -285,6 +285,18 @@
           </li>
         </ul>
       </div>
+      <div class="footer-form-subscribe">
+        <b class="footer-form-title">Подпишитесь на рассылку</b>
+        <form action="#" class="footer-subscribe-form" n>
+          <input type="email" name="email" class="subscribe-form-input" placeholder="E-mail">
+          <div class="subscribe-form-btn-content">
+            <button type="submit" class="subscribe-form-btn button">Подписаться</button>
+            <svg class="subscribe-form-icon" width="24" height="24">
+              <use href="./images/icons/sprite.svg#telegram"></use>
+            </svg>
+          </div>
+        </form>
+      </div>
     </div>
   </footer>
 
