--- a/portfolio.html
+++ b/portfolio.html
@@ -112,8 +112,8 @@
                 </p>
               </div>
               <div class="text-content">
-                <h3 class="portfolio-name-title title">Технокряк</h3>
-                <p class="portfolio-name-product part">Веб-сайт</p>
+                <h3 class="portfolio-name-title title">Постер New Orlean vs Golden Star</h3>
+                <p class="portfolio-name-product part">Дизайн</p>
               </div>
             </a>
           </li>
@@ -129,8 +129,8 @@
                 </p>
               </div>
               <div class="text-content">
-                <h3 class="portfolio-name-title title">Технокряк</h3>
-                <p class="portfolio-name-product part">Веб-сайт</p>
+                <h3 class="portfolio-name-title title">Ресторан Seafood</h3>
+                <p class="portfolio-name-product part">Приложение</p>
               </div>
             </a>
           </li>
@@ -146,8 +146,8 @@
                 </p>
               </div>
               <div class="text-content">
-                <h3 class="portfolio-name-title title">Технокряк</h3>
-                <p class="portfolio-name-product part">Веб-сайт</p>
+                <h3 class="portfolio-name-title title">Проект Prime</h3>
+                <p class="portfolio-name-product part">Маркетинг</p>
               </div>
             </a>
           </li>
@@ -163,8 +163,8 @@
                 </p>
               </div>
               <div class="text-content">
-                <h3 class="portfolio-name-title title">Технокряк</h3>
-                <p class="portfolio-name-product part">Веб-сайт</p>
+                <h3 class="portfolio-name-title title">Проект Boxes</h3>
+                <p class="portfolio-name-product part">Приложение</p>
               </div>
             </a>
           </li>
@@ -179,7 +179,7 @@
                 </p>
               </div>
               <div class="text-content">
-                <h3 class="portfolio-name-title title">Технокряк</h3>
+                <h3 class="portfolio-name-title title">Inspiration has no Borders</h3>
                 <p class="portfolio-name-product part">Веб-сайт</p>
               </div>
             </a>
@@ -196,8 +196,8 @@
                 </p>
               </div>
               <div class="text-content">
-                <h3 class="portfolio-name-title title">Технокряк</h3>
-                <p class="portfolio-name-product part">Веб-сайт</p>
+                <h3 class="portfolio-name-title title">Издание Limited Edition</h3>
+                <p class="portfolio-name-product part">Дизайн</p>
               </div>
             </a>
           </li>
@@ -213,8 +213,8 @@
                 </p>
               </div>
               <div class="text-content">
-                <h3 class="portfolio-name-title title">Технокряк</h3>
-                <p class="portfolio-name-product part">Веб-сайт</p>
+                <h3 class="portfolio-name-title title">Проект LAB</h3>
+                <p class="portfolio-name-product part">Маркетинг</p>
               </div>
             </a>
           </li>
@@ -230,8 +230,8 @@
                 </p>
               </div>
               <div class="text-content">
-                <h3 class="portfolio-name-title title">Технокряк</h3>
-                <p class="portfolio-name-product part">Веб-сайт</p>
+                <h3 class="portfolio-name-title title">Growing Business</h3>
+                <p class="portfolio-name-product part">Приложение</p>
               </div>
             </a>
           </li>
