--- a/index.html
+++ b/index.html
@@ -392,14 +392,12 @@
       </div>
       <div class="footer-form-subscribe">
         <b class="footer-form-title">Подпишитесь на рассылку</b>
-        <form action="#" class="footer-subscribe-form" n>
+        <form action="#" class="footer-subscribe-form">
           <input type="email" name="email" class="subscribe-form-input" placeholder="E-mail">
-          <div class="subscribe-form-btn-content">
-            <button type="submit" class="subscribe-form-btn button">Подписаться</button>
-            <svg class="subscribe-form-icon" width="24" height="24">
-              <use href="./images/icons/sprite.svg#telegram"></use>
-            </svg>
-          </div>
+          <button type="submit" class="subscribe-form-btn button">Подписаться</button>
+          <svg class="subscribe-form-icon" width="24" height="24">
+            <use href="./images/icons/sprite.svg#telegram"></use>
+          </svg>
         </form>
       </div>
     </div>
